<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    tools:context=".MenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/my_color_text"
        android:background="@color/my_color_background"
        android:gravity="center"
        android:padding="16dp"
        android:layout_marginBottom="48dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:onClick="openHumanGuess"
        android:text="@string/menu_btn_human"
        android:textSize="17sp"
        android:textColor="@color/my_color_text"
        android:backgroundTint="@color/my_button_color"
        android:layout_marginBottom="24dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:onClick="openAndroidGuess"
        android:text="@string/menu_btn_android"
        android:textSize="17sp"
        android:textColor="@color/my_color_text"
        android:backgroundTint="@color/my_button_color" />

</LinearLayout>